--- a/src/Pages/HomePage/index.css
+++ b/src/Pages/HomePage/index.css
@@ -8,5 +8,5 @@
 }
 
 .PopUpBg {
-    background: linear-gradient(90deg, rgba(255, 255, 255, 1) 33%, rgba(35, 35, 182, 1) 87%);
+    background: linear-gradient(180deg, rgba(255,255,255,1) 31%, rgba(35,35,182,1) 99%);
 }
